--- a/Client/src/containers/HomePage/HomeHeader/HomeHeader.scss
+++ b/Client/src/containers/HomePage/HomeHeader/HomeHeader.scss
@@ -1,6 +1,6 @@
 .homeHeader {
   .homeHeader_top {
-    padding: 10px 0px;
+    padding: 10px 180px;
     width: 100%;
     height: 80px;
     background-color: rgb(252, 241, 241);
@@ -12,7 +12,6 @@
       width: 30%;
       height: 100%;
       display: flex;
-      justify-content: center;
       align-items: center;
       i {
         font-size: 24px;
@@ -22,6 +21,7 @@
       .logo-img {
         width: 164px;
         height: 36px;
+        cursor: pointer;
         background-image: url("../../../assets/images/bookingcare-2020.svg");
       }
     }
@@ -49,8 +49,7 @@
       width: 20%;
       display: flex;
       align-items: center;
-      padding-left: 32px;
-
+      justify-content: right;
       i {
         color: #45c3d2;
         font-size: 16px;
