--- a/Client/src/containers/System/Admin/DoctorManage.scss
+++ b/Client/src/containers/System/Admin/DoctorManage.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     textarea {
-      width: 50%;
+      width: 480px;
     }
     margin-bottom: 8px;
   }
