--- a/Client/src/containers/HomePage/DetailDoctor/DetailDoctor.scss
+++ b/Client/src/containers/HomePage/DetailDoctor/DetailDoctor.scss
@@ -12,11 +12,15 @@
       margin-right: 4px;
       color: rgb(255, 115, 0);
     }
-    a {
+    p{
       font-size: 16px;
       text-decoration: none;
       margin: 0px 4px;
       color: rgb(255, 115, 0);
+      cursor: pointer;
+    }
+    p:hover{
+      color:green;
     }
   }
   .doctor_intro-container {
