--- a/Client/src/containers/HomePage/DetailSpecialty/DoctorInforShowOnSpecialty.scss
+++ b/Client/src/containers/HomePage/DetailSpecialty/DoctorInforShowOnSpecialty.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    padding-top: 16px;
     .avatar {
       width: 120px;
       height: 120px;
@@ -10,13 +11,30 @@
     }
     .doctor-detail {
       width: 80%;
-      margin-left: 8px;
-      padding: 0px 8px;
-      b {
+      padding: 0px 12px;
+      .doctor_name{
         font-size: 16px;
+        cursor: pointer;
       }
-      p {
+      .doctor_name:hover{
+        color: green;
+      }
+      .doctor_intro{
+        margin-top: 8px;
         font-size: 12px;
+      }
+      .specialty_location{
+        display: flex;
+        align-items: center;
+        .location_logo{
+          margin-right: 8px;
+          cursor: pointer;
+        }
+        .location_name{
+          margin: 0px;
+          cursor: pointer;
+
+        }
       }
     }
   }
