--- a/Client/src/containers/HomePage/HomeHeader/HomeHeader.scss
+++ b/Client/src/containers/HomePage/HomeHeader/HomeHeader.scss
@@ -9,15 +9,10 @@
     top: 0px;
     z-index: 1000;
     .homeHeader-left {
-      width: 30%;
+      width: 25%;
       height: 100%;
       display: flex;
       align-items: center;
-      i {
-        font-size: 24px;
-        margin-right: 16px;
-        color: gray;
-      }
       .logo-img {
         width: 164px;
         height: 36px;
@@ -46,7 +41,7 @@
       }
     }
     .homeHeader-right {
-      width: 20%;
+      width: 25%;
       display: flex;
       align-items: center;
       justify-content: right;
@@ -76,6 +71,14 @@
         .active {
           color: rgb(255, 187, 0);
         }
+      }
+      .header_login{
+        margin-left: 32px;
+        font-size: 18px;
+      }
+      .header_login:hover{
+        cursor: pointer;
+        color: orange;
       }
     }
   }
